# bert-petit-price

./: .gitignore  Makefile  README.md  bert.ipynb  corpus.txt  pyproject.toml
application/: lightning_module.py
config/: settings.py
domain/: architecture.py  base.py
infrastructure/: data_pipeline.py
tests/: test_architecture.py
