[project]
name = "bert-pretraining"
version = "0.1.0"
description = "Implementación modular de BERT desde cero"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.0.0,<2.3.0",
    "pytorch-lightning>=2.0.0",
    "transformers<4.45",
    "tensorboard>=2.0.0",
    "numpy<2.0",
    "certifi>=2026.5.20",
    "setuptools<82",
    "ipywidgets>=8.1.8",
    "pylint>=4.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv]
package = false
python-preference = "managed"
